<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 		   android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#EDF1ED"
        android:orientation="vertical">

        <!--自定义对话框title-->
        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FF9800"
            android:gravity="center"
            android:text="@string/tv"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:visibility="visible"/>

        <!--自定义对话框内容-->
        <LinearLayout
            android:id="@+id/ctv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/username"/>
            <EditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/passwd"
                android:outlineSpotShadowColor="#FF03A9F4"
                />
        </LinearLayout>

        <!--自定义对话框下方操作按钮-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btn_cancel"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#000"
                android:background="#FFEBE0E0"/>
            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#8F8989"/>
            <TextView
                android:id="@+id/btn_sign"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btn_sign"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="#FFEBE0E0"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>